--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -44,5 +44,25 @@
 		<servlet-name>appServlet</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
+	
 
+	<filter>
+		<filter-name>Filter1</filter-name>
+		<filter-class>com.moveone.app.filters.Filter1</filter-class>
+	</filter>
+	
+	<filter-mapping>
+		<filter-name>Filter1</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
+	<filter>
+		<filter-name>Filter2</filter-name>
+		<filter-class>com.moveone.app.filters.Filter2</filter-class>
+	</filter>
+	
+	<filter-mapping>
+		<filter-name>Filter2</filter-name>
+		<url-pattern>/qna/*</url-pattern>
+	</filter-mapping>
 </web-app>
