--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -45,6 +45,20 @@
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 	
+<!-- 	<error-page>
+		<error-code>404</error-code>
+		<location>/WEB-INF/views/errors/error.jsp</location>
+	</error-page>
+	
+	<error-page>
+		<error-code>400</error-code>
+		<location>/errors/error400</location>
+	</error-page> -->
+	
+<!-- 	<error-page>
+		<error-code>500</error-code>
+		<location>/errors/error400</location>
+	</error-page> -->
 
 <!-- 	<filter>
 		<filter-name>Filter1</filter-name>
